2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/15_plus_int_string.deca
// Description :
//      opération plus entre int et string  
// Resultats :
//    Erreur Contexteulle : ligne 11 : l'opération + n'est pas possible entre 'int' et 'string'
//
// Historique :
// cree le 10/01/2024

{
    int x ;
    x = 1 + "bonjour";
}